button link updated.

--- a/index.html
+++ b/index.html
@@ -76,8 +76,10 @@
             transform: scale(1.1) rotate(180deg);
         }
 
-        button {
+        .button {
             display: block;
+            max-width: 30%;
+            text-align: center;
             margin: 0 auto;
             border: 1px solid plum;
             font-size: 20px;
@@ -85,9 +87,10 @@
             padding: 10px;
             transition: all 150ms ease-in;
             cursor: pointer;
+            text-decoration: none;
         }
 
-        button:hover {
+        .button:hover {
             background-color: plum;
             color: white;
         }
@@ -150,7 +153,9 @@
             to cook.
             <a href="https://en.wikipedia.org/wiki/Indian_cuisine" target="_blank">📖 Read more...</a>
         </p>
-        <button>Learn Indian Cooking</button>
+        <a href="https://spiceitupp.com/how-to-make-indian-curry-indian-cooking-for-beginners/" target="_blank"
+            class="button">Learn
+            Indian Cooking</a>
     </div>
     <footer>
         Coedd by Vijeta Singh with ❤️
